# swarm-ops

./: .gitignore  Cargo.toml  Dockerfile  SwarmOps_Error_Log.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  middleware.rs  models.rs  routes.rs
src/agents/: health_checker.rs  incident_responder.rs  log_analyzer.rs  metrics_agent.rs  mod.rs
src/services/: claude_client.rs  mod.rs  task_queue.rs
src/swarm/: consensus.rs  manager.rs  mod.rs  state.rs  worker.rs
tests/: agents_test.rs  consensus_test.rs  queue_test.rs  routes_test.rs  swarm_test.rs  worker_test.rs
